# tree-sitter-legesher-python

./: .all-contributorsrc  .eslintrc.json  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.zh-cn.md  binding.gyp  grammar.js  index.js  keywords.json  package.json  translation.js  unibeautifyrc.json
.github/: config.yml
.github/workflows/: commit-issue.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
corpus/: expressions.txt  literals.txt  statements.txt
corpus/template/: literals-template.txt
examples/: compound-statement-without-trailing-newline.py  crlf-line-endings.py  mixed-spaces-tabs.py  multiple-newlines.py  python2-grammar-crlf.py  python2-grammar.py  python3-grammar-crlf.py  python3-grammar.py  python3.8_grammar.py  simple-statements-without-trailing-newline.py  tabs.py  trailing-whitespace.py
examples/template/: python3-grammar-template.py  tabs-template.py
legesher/: files.json  translation.js
locale/en/: grammar-en.js
properties/: highlights.css
properties/template/: highlights-template.css
queries/: highlights.scm
script/: known_failures.txt  new_failures.txt  parse-examples
src/: binding.cc  grammar.json  highlights.json  new-parser.c  node-types.json  parser.c  scanner.cc
src/template/: highlights-template.json
template/: grammar-template.js
template/corpus/: expressions-template.txt  statements-template.txt
template/examples/: multiple-newlines-template.py  python3-grammar-crlf-template.py  python3.8_grammar-template.py
test/corpus/: expressions.txt  (+2 more)
(+8 files in other folders)
